[gd_scene load_steps=8 format=3 uid="uid://dmpdafkaia3kr"]

[ext_resource type="Texture2D" uid="uid://clllj1wacl6sl" path="res://assets/background.png" id="1_g3eks"]
[ext_resource type="Script" uid="uid://bhucvvl5ctshy" path="res://scripts/menu.gd" id="1_v86rl"]
[ext_resource type="Texture2D" uid="uid://56tnq5ie4i4g" path="res://assets/panel.png" id="2_v86rl"]
[ext_resource type="Texture2D" uid="uid://cstcc5cyj0q8r" path="res://assets/back_button_hover.tres" id="3_13sgg"]
[ext_resource type="Texture2D" uid="uid://c6pc6b2whnpg8" path="res://assets/exit.tres" id="4_i6lef"]
[ext_resource type="Texture2D" uid="uid://c5vx6ja88yp2q" path="res://assets/reload.tres" id="5_70i5f"]
[ext_resource type="FontFile" uid="uid://bu7rb6jlkqmcu" path="res://assets/LilitaOne-Regular-NotoSans-Black.ttf" id="6_mj5lg"]

[node name="Menu" type="Node2D"]
position = Vector2(-165, -7)
scale = Vector2(2, 2)
script = ExtResource("1_v86rl")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-9, 450)
texture = ExtResource("1_g3eks")

[node name="Panel" type="Sprite2D" parent="."]
position = Vector2(351, 486)
texture = ExtResource("2_v86rl")

[node name="Back_button" type="Button" parent="Panel"]
offset_left = 78.0
offset_top = 171.0
offset_right = 203.0
offset_bottom = 298.0
icon = ExtResource("3_13sgg")
metadata/_edit_use_anchors_ = true

[node name="exit_button" type="Button" parent="Panel"]
offset_left = -174.0
offset_top = 172.0
offset_right = -49.0
offset_bottom = 299.0
icon = ExtResource("4_i6lef")
metadata/_edit_use_anchors_ = true

[node name="Reload" type="Button" parent="Panel"]
offset_left = -87.0
offset_top = -141.0
offset_right = 38.0
offset_bottom = -14.0
scale = Vector2(1.4, 1.4)
icon = ExtResource("5_70i5f")
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 270.0
offset_top = 230.0
offset_right = 310.0
offset_bottom = 270.0

[node name="Current_Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = -72.0
offset_right = 237.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("6_mj5lg")
theme_override_font_sizes/font_size = 40
text = "Current Score : 00"

[connection signal="pressed" from="Panel/Back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/Reload" to="." method="_on_reload_pressed"]
